fixed vertical align bug in contact

--- a/www/CSS/contact.css
+++ b/www/CSS/contact.css
@@ -38,6 +38,7 @@
 }
 
 .dienstSlider {
+    display:table;
     width: 700%;
     top:0;
     position: relative;
@@ -77,10 +78,10 @@
 
 .dienst {
     
-    width: 12.28%;
-    margin-left: 1%;
-    margin-right: 1%;
-    display: inline-block;
+    width: 14.28%;
+    padding-left: 1%;
+    padding-right: 1%;
+    display: table-cell;
 }
 
 .dienst .icoon {
